[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "telemetry-python"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyserial",
    "cantools",
    "python-can",
    "digi-xbee",
    "psycopg2",
    "SQLAlchemy"
]

